# pytest-testinfra

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Vagrantfile  ansible.cfg  dev-requirements.txt  docker-compose.yml  hatch.toml  merge_upstream.sh  mypy.ini  pylintrc  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  tox.yml
.travis/: install.sh
doc/: Makefile
doc/source/: api.rst  backends.rst  conf.py  examples.rst  index.rst  invocation.rst  modules.rst  support.rst  test_php.py  test_php2.py  test_php3.py
doc/source/_templates/: layout.html  piwik.html
images/alpine/: Dockerfile
images/alpine_35/: Dockerfile
images/alpine_38/: Dockerfile
images/archlinux/: Dockerfile
images/centos_6/: Dockerfile
images/centos_7/: Dockerfile
images/debian_bookworm/: Dockerfile
images/debian_bullseye/: Dockerfile
images/debian_buster/: Dockerfile
images/debian_jessie/: Dockerfile
images/debian_jessie/supervisor/: nc.conf
images/debian_stretch/: Dockerfile
images/debian_wheezy/: Dockerfile
images/fedora/: Dockerfile
images/fedora_21/: Dockerfile
images/rockylinux8/: Dockerfile
images/rockylinux9/: Dockerfile
images/ubuntu_trusty/: Dockerfile
images/ubuntu_xenial/: Dockerfile
test/: basic_test.py  conftest.py  inventory.yml  ssh_key  test_ansible_host_expressions.py  test_ansible_inventory.py  test_backends.py  test_invocation.py  test_modules.py  test_socket.py
test/unit/: test_vagrantbackend.py
testinfra/: __init__.py  host.py  main.py  plugin.py  sysinfo.py
testinfra/backend/: __init__.py  ansible.py  base.py  chroot.py  docker.py  kubectl.py  local.py  lxc.py  lxd.py  openshift.py  paramiko.py  podman.py  salt.py  salt_runner.py  ssh.py  vagrant.py  winrm.py
testinfra/modules/: __init__.py  addr.py  ansible.py  apache_config.py  base.py  blockdevice.py  bond.py  certificate.py  command.py  dns.py  docker.py  env.py  environment.py  file.py  group.py  interface.py  ip.py  iproute2.py  iptables.py  limits.py  mountpoint.py  network.py  package.py  package.py.bak  pip.py  podman.py  port.py  process.py  puppet.py  python_package.py  ruby_package.py  salt.py  salt_run.py  saltrunner.py  service.py  socket.py  sockethost.py  sudo.py  supervisor.py  sysctl.py  (+3 more)
testinfra/modules/test/: conftest.py  test_command.py  test_file.py  test_service.py  test_sysinfo.py
testinfra/test/: conftest.py  test_backend.py  test_backends.py  test_file.py  test_modules.py  test_package.py  test_port.py  test_python_package.py  test_ruby_package.py  test_service.py  test_socket.py
testinfra/test/integration/: test_centos_7.py  test_fedora.py  test_fedora_21.py  test_jessie.py  test_trusty.py  test_wheezy.py
testinfra/utils/: __init__.py  ansible_runner.py  docker_compose_to_ssh_config.py  ssh_config_to_ansible_inventory.py  timed_thread.py
vagrant/: hosts.yml  pre-init
vagrant/centos-7/: .gitignore  Vagrantfile  install.sh  pre-init
vagrant/centos-7/.vagrant/machines/default-master/virtualbox/: action_provision  action_set_name  id  index_uuid  synced_folders
vagrant/centos-7/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid
vagrant/macos-sierra/: .gitignore  Vagrantfile
vagrant/ubuntu-trusty/: Vagrantfile  install.sh
vagrant/ubuntu-trusty/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  synced_folders
