[metadata]
name = pytest-testinfra
url = https://github.com/pytest-dev/pytest-testinfra
description = Test infrastructures
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Philippe Pepiot
author_email = phil@philpep.org
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    Framework :: Pytest

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    pytest!=3.0.2
extras_require =

[options.extras_require]
ansible = ansible
docker =
kubectl =
local =
lxc =
paramiko = paramiko
salt = salt
winrm = pywinrm

[options.entry_points]
pytest11 =
    pytest11.testinfra=testinfra.plugin

[tool:pytest]
norecursedirs = .tox .git .local *.egg build
